[tool.poetry]
name = "data-join-tabular"
version = "1.0.0"
description = "data tabular join service"
authors = ["opensource-OKP4 <opensource@okp4.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.13.2"
pandas = "^1.5.3"

[tool.poetry.scripts]
data-join-tabular = "data_join_tabular.main:cli"

[tool.semantic_release]
version_variable = [
    "src/data_join_tabular/__init__.py:__version__",
    "pyproject.toml:version"
]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
click = "^8.1.7"
pytest = "^7.4.1"
flake8 = "^5.0.3"
mypy = "^1.6"
black = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
